--- a/MVCApp/Views/Shared/TransLayout.cshtml
+++ b/MVCApp/Views/Shared/TransLayout.cshtml
@@ -21,13 +21,23 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Index">Index</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Viewdata">Viewdata</a>
                         </li>
                         <li class="nav-item"></li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Test">Test1</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Viewbag">Viewbag</a>
+                        </li>
+                        <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Tempdata1">Tempdata1</a>
+                        </li>
+                         <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Setsession">Setsession</a>
+                        </li>
+                        
+                         <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Getsession">Getsession</a>
                         </li>
                     </ul>
                 </div>
