--- a/MVCApp/Views/Shared/StudentLayout.cshtml
+++ b/MVCApp/Views/Shared/StudentLayout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -21,32 +21,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Index">Index</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Index" asp-action="Index">Index</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Viewdata">Viewdata</a>
-                        </li>
-                        <li class="nav-item"></li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Viewbag">Viewbag</a>
-                        </li>
-                        <li class="nav-item"></li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Tempdata1">Tempdata1</a>
-                        </li>
-                         <li class="nav-item"></li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Setsession">Setsession</a>
-                        </li>
-                        
-                         <li class="nav-item"></li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="Getsession">Getsession</a>
-                        </li>
-                        <li class="nav-item"></li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="yt">yt</a>
-                        </li>
-                        <li class="nav-item"></li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="partialRTA">Partial</a>
-                        </li>
-                        <li class="nav-item"></li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Trans" asp-action="RTA">RTA</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Create</a>
                         </li>
                         
                     </ul>
