--- a/MVCApp/Views/Shared/_Layout.cshtml
+++ b/MVCApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item"></li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Test">Test1</a>
                         </li>
+                        <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Index">Student</a>
+                        </li>
                     </ul>
                 </div>
             </div>
