--- a/MVCApp/Views/Student/Create.cshtml
+++ b/MVCApp/Views/Student/Create.cshtml
@@ -24,7 +24,7 @@
 <button type="submit" class="btn btn-primary">Create</button>
 
 </form>
-
+@* 
 @section Scripts{
-    @{await Html.RenderPartialAsync("ValidationScripts");}
-}
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+} *@
