--- a/MVCApp/Views/Student/Edit.cshtml
+++ b/MVCApp/Views/Student/Edit.cshtml
@@ -32,5 +32,5 @@
 </form>
 
 @section Scripts{
-    @{await Html.RenderPartialAsync("ValidationScripts");}
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
